--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
-        tools:targetApi="33">
+        tools:targetApi="33"
+        android:configChanges="keyboardHidden|orientation|screenSize">
 
         <activity
             android:name=".root.ui.RootActivity"
