--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
+
+    //Permission
+    //Peko
+    implementation 'com.markodevcic:peko:3.0.2'
 }
